update visionary text and modal style

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -208,6 +208,11 @@ body {
   padding: 20px !important;
   background: linear-gradient(to bottom, #09133a 0%, #070e28 100%) !important;
   border: none !important;
+  outline: 0 !important;
+}
+
+.ReactModal__Overlay .ReactModal__Content:focus {
+  outline: 0 !important;
 }
 
 .ReactModal__Overlay .ReactModal__Content.notice-modal .button-group {
