--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1867,6 +1867,9 @@ body {
                     font-size: 16px;
                   }
                 }
+                input {
+                  padding-left: 60px;
+                }
                 .custom-error {
                   bottom: 20px;
                 }
