fix cookie-content style issue

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3902,9 +3902,9 @@ body {
   .segment.mobile-navbar .menu .right.menu .item:last-child .menu.transition {
     background: #070e29 !important;
     position: absolute;
-    top: 48px;
+    top: 45px;
     width: 320px;
-    left: -238px;
+    left: -210px;
     z-index: 299;
     overflow: visible;
     text-align: left;
@@ -4589,6 +4589,7 @@ body {
 
   .cookieConsent .cookie-consent .cookie-title .btn-group {
     width: 100%;
+    flex-direction: row;
   }
 
   .cookieConsent .cookie-consent .cookie-title .title {
@@ -4603,15 +4604,15 @@ body {
   }
 
   .cookieConsent .btn {
-    left: 95px;
-    top: 169px;
+    left: 17px;
+    top: 197px;
   }
 }
 
 @media (min-width: 360px) {
   .segment.mobile-navbar .menu .right.menu .item:last-child .menu.transition {
     width: 360px;
-    left: -275px;
+    left: -240px;
   }
 
   .page .main .divide {
@@ -4667,15 +4668,14 @@ body {
   }
 
   .cookieConsent .btn {
-    left: 113px;
-    top: 168px;
+    left: 29px;
   }
 }
 
 @media (min-width: 375px) {
   .segment.mobile-navbar .menu .right.menu .item:last-child .menu.transition {
     width: 375px;
-    left: -290px;
+    left: -255px;
   }
 
   .page .main .portfolio-page .portfolio-header .header-gradient .portfolio-header-description .portfolio-header-figure {
@@ -4720,15 +4720,14 @@ body {
   }
 
   .cookieConsent .btn {
-    left: 121px;
-    top: 149px;
+    left: 39px;
   }
 }
 
 @media (min-width: 384px) {
   .segment.mobile-navbar .menu .right.menu .item:last-child .menu.transition {
     width: 384px;
-    left: -300px;
+    left: -263px;
   }
 
   .page .main .home-page .home-section .review-item .review-avatar .icon-quote-right i {
@@ -4744,25 +4743,35 @@ body {
   }
 
   .cookieConsent .btn {
-    left: 126px;
+    left: 46px;
+  }
+}
+
+@media (min-width: 411px) {
+  .segment.mobile-navbar .menu .right.menu .item:last-child .menu.transition {
+    width: 411px;
+    left: -290px;
+  }
+
+  .cookieConsent .btn {
+    left: 59px;
   }
 }
 
 @media (min-width: 412px) {
   .segment.mobile-navbar .menu .right.menu .item:last-child .menu.transition {
     width: 412px;
-    left: -328px;
   }
 
   .cookieConsent .btn {
-    left: 138px;
+    left: 60px;
   }
 }
 
 @media (min-width: 414px) {
   .segment.mobile-navbar .menu .right.menu .item:last-child .menu.transition {
     width: 414px;
-    left: -329px;
+    left: -293px;
   }
 
   .page .main .divide {
@@ -4819,7 +4828,7 @@ body {
   }
 
   .cookieConsent .btn {
-    left: 141px;
+    left: 62px;
   }
 }
 
@@ -5104,6 +5113,7 @@ body {
   .cookieConsent .cookie-consent .cookie-title .btn-group {
     width: 25%;
     padding: 30px 35px;
+    flex-direction: column;
   }
 
   .cookieConsent .cookie-consent .cookie-title .btn-group .button.detail-btn {
@@ -5270,7 +5280,7 @@ body {
   }
 
   .cookieConsent .btn {
-    left: 60px;
+    left: 65px;
   }
 }
 
@@ -5915,7 +5925,7 @@ body {
   }
 
   .cookieConsent .btn {
-    left: 100px;
+    left: 83px;
   }
 }
 
@@ -6230,7 +6240,7 @@ body {
   }
 
   .cookieConsent .btn {
-    left: 110px;
+    left: 103px;
   }
 }
 
@@ -6252,7 +6262,7 @@ body {
   }
 
   .cookieConsent .btn {
-    left: 166px;
+    left: 114px;
   }
 }
 
