--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -422,6 +422,23 @@ body {
   .menu {
     border: none !important;
     width: 100% !important;
+    &.transition {
+      &.visible {
+        opacity: 1;
+        animation-name: fadeInOpacity;
+        animation-iteration-count: 1;
+        animation-timing-function: ease-in;
+        animation-duration: 0.3s;
+      }
+      @keyframes fadeInOpacity {
+        0% {
+          opacity: 0;
+        }
+        100% {
+          opacity: 1;
+        }
+      }
+    }
     &.right-menu-width {
       width: auto !important;
       .ui {
@@ -678,7 +695,25 @@ body {
       justify-content: space-between;
       overflow: hidden;
       height: 250px;
-
+      transition: .5s;
+      &::before {
+				content: '';
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				background: #ffee10;
+				transition: .5s;
+				transform: scale(.9);
+				z-index: -1;
+			}
+      &:hover {
+        &::before {
+          transform: scale(1.1);
+          box-shadow: 0 0 15px #ffee10;
+        }
+      }
       @media (min-width: 768px) {
         &.service-item-quater {
           height: 300px;
@@ -1562,9 +1597,10 @@ body {
                 padding-right: 30px;
                 img {
                   width: 50px;
-                  height: 50px;
+                  height: auto;
                 }
                 p {
+                  padding-top: 5px;
                   font-family: "Gotham Bold";
                 }
               }
@@ -2078,7 +2114,7 @@ body {
         .header-gradient {
           width: 100%;
           height: 885px;
-          background: linear-gradient(to right bottom, rgba(3, 5, 28, 0.5), rgba(3, 5, 28, 1)) !important;
+          background: linear-gradient(to right bottom, rgba(3, 5, 28, 0.1), rgba(3, 5, 28, 1)) !important;
           .header-description {
             text-align: center;
             color: #fff;
@@ -3470,7 +3506,6 @@ body {
                   padding: 0px 10px 0px 10px;
                   img {
                     width: 40px;
-                    height: auto;
                   }
                 }
               }
@@ -4989,6 +5024,9 @@ body {
                 margin-left: 50px;
                 margin-right: 50px;
                 .figure {
+                  img {
+                    width: 50px;
+                  }
                   p {
                     font-size: 16px;
                   }
