--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -476,6 +476,20 @@ body {
           display: flex;
           flex-direction: column;
           border-radius: 5px;
+          transition: 0.5s;
+          border: 2px solid transparent;
+          &::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: #ffee10;
+            transition: .5s;
+            transform: scale(.9);
+            z-index: -1;
+          }
           .avatar-item {
             border-radius: 50%;
             border: 2px solid #202c5a;
@@ -525,7 +539,10 @@ body {
             &.hosting {
               background-image: linear-gradient(to right bottom, rgba(20, 49, 144, 0.6), rgba(3, 5, 28, 0.7)), url(/images/web-dropdown.jpg) !important;
               background-size: cover !important;
-              border-bottom: 2px solid #7436e9;
+              border: 2px solid #7436e9;
+              color: #7436e9;
+              box-shadow: 0 0 10px #7436e9;
+              text-shadow: 0 0 10px #7436e9;
               .avatar-item {
                 margin-bottom: 9px;
               }
@@ -533,32 +550,50 @@ body {
             &.desktop {
               background-image: linear-gradient(to right bottom, rgba(20, 49, 144, 0.6), rgba(3, 5, 28, 0.7)), url(/images/web-dropdown.jpg) !important;
               background-size: cover !important;
-              border-bottom: 2px solid #7436e9;
+              border: 2px solid #7436e9;
+              color: #7436e9;
+              box-shadow: 0 0 10px #7436e9;
+              text-shadow: 0 0 10px #7436e9;
             }
             &.mobile {
               background-image: linear-gradient(to right bottom, rgba(20, 49, 144, 0.6), rgba(3, 5, 28, 0.7)), url(/images/mobile-dropdown.jpg) !important;
               background-size: cover !important;
-              border-bottom: 2px solid #f34cb5;
+              border: 2px solid #f34cb5;
+              color: #f34cb5;
+              box-shadow: 0 0 10px #f34cb5;
+              text-shadow: 0 0 10px #f34cb5;
             }
             &.ui {
               background-image: linear-gradient(to right bottom, rgba(20, 49, 144, 0.6), rgba(3, 5, 28, 0.7)), url(/images/uiux-dropdown.jpg) !important;
               background-size: cover !important;
-              border-bottom: 2px solid #f3a864;
+              border: 2px solid #f3a864;
+              color: #f3a864;
+              box-shadow: 0 0 10px #f3a864;
+              text-shadow: 0 0 10px #f3a864;
             }
             &.branding {
               background-image: linear-gradient(to right bottom, rgba(20, 49, 144, 0.6), rgba(3, 5, 28, 0.7)), url(/images/branding-dropdown.jpg) !important;
               background-size: cover !important;
-              border-bottom: 2px solid #e4cb0d;
+              border: 2px solid #e4cb0d;
+              color: #e4cb0d;
+              box-shadow: 0 0 10px #e4cb0d;
+              text-shadow: 0 0 10px #e4cb0d;
             }
             &.illustration {
               background-image: linear-gradient(to right bottom, rgba(20, 49, 144, 0.6), rgba(3, 5, 28, 0.7)), url(/images/illustration-dropdown.jpg) !important;
               background-size: cover !important;
-              border-bottom: 2px solid #90ce41;
+              border: 2px solid #90ce41;
+              color: #90ce41;
+              box-shadow: 0 0 10px #90ce41;
+              text-shadow: 0 0 10px #90ce41;
             }
             &.marketing {
               background-image: linear-gradient(to right bottom, rgba(20, 49, 144, 0.6), rgba(3, 5, 28, 0.7)), url(/images/marketing-dropdown.jpg) !important;
               background-size: cover !important;
-              border-bottom: 2px solid #285596;
+              border: 2px solid #285596;
+              color: #285596;
+              box-shadow: 0 0 10px #285596;
+              text-shadow: 0 0 10px #285596;
             }
             .avatar-item {
               margin-bottom: 5px;
@@ -567,6 +602,7 @@ body {
               }
               &.desktop {
                 border: 2px solid #7436e9;
+                box-shadow: 0 0 10px #7436e9;
                 color: #7436e9;
                 i {
                   color: #7436e9;
@@ -574,6 +610,7 @@ body {
               }
               &.hosting {
                 border: 2px solid #7436e9;
+                box-shadow: 0 0 10px #7436e9;
                 color: #7436e9;
                 i {
                   color: #7436e9;
@@ -581,6 +618,7 @@ body {
               }
               &.mobile {
                 border: 2px solid #f34cb5;
+                box-shadow: 0 0 10px #f34cb5;
                 color: #f34cb5;
                 i {
                   color: #f34cb5;
@@ -588,6 +626,7 @@ body {
               }
               &.ui {
                 border: 2px solid #f3a864;
+                box-shadow: 0 0 10px #f3a864;
                 color: #f3a864;
                 i {
                   color: #f3a864;
@@ -595,6 +634,7 @@ body {
               }
               &.branding {
                 border: 2px solid #e4cb0d;
+                box-shadow: 0 0 10px #e4cb0d;
                 color: #e4cb0d;
                 i {
                   color: #e4cb0d;
@@ -602,6 +642,7 @@ body {
               }
               &.illustration {
                 border: 2px solid #90ce41;
+                box-shadow: 0 0 10px #90ce41;
                 color: #90ce41;
                 i {
                   color: #90ce41;
@@ -609,6 +650,7 @@ body {
               }
               &.marketing {
                 border: 2px solid #285596;
+                box-shadow: 0 0 10px #285596;
                 color: #285596;
                 i {
                   color: #285596;
